--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>Enter your email and hit Remaind me and you'll be one of the first to know when the site is ready:</p>
                     <form class="form-inline" action="assets/sendmail.php" method="post">
                         <input type="text" name="email" placeholder="Enter your email...">
-                        <button type="submit" class="btn ">Remaind me !!!</button>
+                        <button type="submit" class="btn ">Remaind me</button>
                     </form>
                     <div class="success-message"></div>
                     <div class="error-message"></div>
