Phone Number Updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1><a href="">My Angle Studio</a> <span class="glyphicon glyphicon-home"></span></h1>
                 </div>
                 <div class="call-us span7">
-                    <p>Tel: <span>+91 8190056653</span> | Mail: <span>MyAngleStudio@gmail.com</span></p>
+                    <p><!--Tel: <span>+91 8190056653</span> |--> Mail: <span>MyAngleStudio@gmail.com</span></p>
                 </div>
             </div>
         </div>
