--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <!-- Content -->
-        <div class="container">
+        <div class="container" style="display:none">
             <div class="row">
                 <div class="span12 subscribe">
                     <h3>Let me know</h3>
