Adds Anchor Tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <title>My Angle Studio - Coming Soon</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
+        <meta name="description" content="My Angle Studio is a movie production studio in India, involved in making Tamil, Telugu and Kannada Movies and serials">
         <meta name="author" content="">
 
         <!-- CSS -->
@@ -38,7 +38,7 @@
                     <h1><a href="">My Angle Studio</a> <span class="glyphicon glyphicon-home"></span></h1>
                 </div>
                 <div class="call-us span7">
-                    <p><!--Tel: <span>+91 8190056653</span> |--> Mail: <span>MyAngleStudio@gmail.com</span></p>
+                    <p>Mail: <span><a href="mailto:MyAngleStudio@gmail.com?Subject=Coming%20Soon" target="_top"">MyAngleStudio@gmail.com</a></span></p>
                 </div>
             </div>
         </div>
@@ -49,8 +49,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="span12">
-                            <h2>We're Coming Soon</h2>
-                            <p>We are working very hard on our site. It will bring a lot of new features. Stay tuned!</p>
+                            <p>We are working very hard on our site. Stay tuned!</p>
                             <div class="timer">
                                 <div class="days-wrapper">
                                     <span class="days"></span> <br>days
@@ -72,6 +71,7 @@
         </div>
 
         <!-- Content -->
+        <h2>Coming Soon</h2>
         <div class="container" style="display:none">
             <div class="row">
                 <div class="span12 subscribe">
