Adds Coming Soon to Bottom of the Page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
         </div>
 
         <!-- Content -->
-        <h2>Coming Soon</h2>
+        <div class="container">
+            <div class="row">
+                <div class="span12 subscribe">
+                    <h2>Coming Soon</h2>
+                </div>
+            </div>
+        </div>
+        
         <div class="container" style="display:none">
             <div class="row">
                 <div class="span12 subscribe">
